--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "NEXT_PUBLIC_DRY_RUN=true next",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
   },
   "dependencies": {
-    "@prex0/uikit": "^0.1.8",
+    "@prex0/uikit": "^0.1.36",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
