--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@prex0/uikit": "^0.5.7",
+    "@prex0/uikit": "^0.8.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -15,11 +15,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.5.7",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.3.0",
-    "react-modal": "^3.16.1",
+    "react-modal": "^3.16.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
